--- a/DATASET/OTHERDATA.IPYNB
+++ b/DATASET/OTHERDATA.IPYNB
@@ -1210,6 +1210,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BSE100=pd.read_csv(\"https://data.nasdaq.com/api/v3/datasets/BSE/BSE100.csv?api_key=hQ1m5NeC8pAcFbhW5xBE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-05-02</td>\n",
+       "      <td>17405.57</td>\n",
+       "      <td>17556.02</td>\n",
+       "      <td>17385.51</td>\n",
+       "      <td>17537.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-04-29</td>\n",
+       "      <td>17828.61</td>\n",
+       "      <td>17863.40</td>\n",
+       "      <td>17523.25</td>\n",
+       "      <td>17574.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-04-28</td>\n",
+       "      <td>17679.32</td>\n",
+       "      <td>17810.20</td>\n",
+       "      <td>17552.67</td>\n",
+       "      <td>17740.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-04-27</td>\n",
+       "      <td>17598.01</td>\n",
+       "      <td>17610.35</td>\n",
+       "      <td>17446.59</td>\n",
+       "      <td>17521.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>17562.95</td>\n",
+       "      <td>17725.39</td>\n",
+       "      <td>17552.81</td>\n",
+       "      <td>17703.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8984</th>\n",
+       "      <td>1984-04-09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8985</th>\n",
+       "      <td>1984-04-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8986</th>\n",
+       "      <td>1984-04-05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>61.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8987</th>\n",
+       "      <td>1984-04-04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>61.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8988</th>\n",
+       "      <td>1984-04-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>61.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8989 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date      Open      High       Low     Close\n",
+       "0     2022-05-02  17405.57  17556.02  17385.51  17537.73\n",
+       "1     2022-04-29  17828.61  17863.40  17523.25  17574.51\n",
+       "2     2022-04-28  17679.32  17810.20  17552.67  17740.84\n",
+       "3     2022-04-27  17598.01  17610.35  17446.59  17521.05\n",
+       "4     2022-04-26  17562.95  17725.39  17552.81  17703.61\n",
+       "...          ...       ...       ...       ...       ...\n",
+       "8984  1984-04-09       NaN       NaN       NaN     60.69\n",
+       "8985  1984-04-06       NaN       NaN       NaN     60.62\n",
+       "8986  1984-04-05       NaN       NaN       NaN     61.06\n",
+       "8987  1984-04-04       NaN       NaN       NaN     61.24\n",
+       "8988  1984-04-03       NaN       NaN       NaN     61.33\n",
+       "\n",
+       "[8989 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BSE100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
