--- a/DATASET/OTHERDATA.IPYNB
+++ b/DATASET/OTHERDATA.IPYNB
@@ -1219,7 +1219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BSE100=BSE100.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1300,48 +1309,48 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8984</th>\n",
-       "      <td>1984-04-09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>60.69</td>\n",
+       "      <th>7597</th>\n",
+       "      <td>1991-01-11</td>\n",
+       "      <td>294.33</td>\n",
+       "      <td>300.91</td>\n",
+       "      <td>294.00</td>\n",
+       "      <td>300.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8985</th>\n",
-       "      <td>1984-04-06</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>60.62</td>\n",
+       "      <th>7598</th>\n",
+       "      <td>1991-01-09</td>\n",
+       "      <td>294.01</td>\n",
+       "      <td>296.93</td>\n",
+       "      <td>293.65</td>\n",
+       "      <td>296.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8986</th>\n",
-       "      <td>1984-04-05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61.06</td>\n",
+       "      <th>7599</th>\n",
+       "      <td>1991-01-07</td>\n",
+       "      <td>293.59</td>\n",
+       "      <td>295.39</td>\n",
+       "      <td>290.42</td>\n",
+       "      <td>295.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8987</th>\n",
-       "      <td>1984-04-04</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61.24</td>\n",
+       "      <th>7600</th>\n",
+       "      <td>1991-01-03</td>\n",
+       "      <td>292.27</td>\n",
+       "      <td>294.41</td>\n",
+       "      <td>289.01</td>\n",
+       "      <td>289.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8988</th>\n",
-       "      <td>1984-04-03</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61.33</td>\n",
+       "      <th>7601</th>\n",
+       "      <td>1991-01-02</td>\n",
+       "      <td>304.01</td>\n",
+       "      <td>304.01</td>\n",
+       "      <td>293.93</td>\n",
+       "      <td>293.93</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8989 rows × 5 columns</p>\n",
+       "<p>7567 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1352,16 +1361,16 @@
        "3     2022-04-27  17598.01  17610.35  17446.59  17521.05\n",
        "4     2022-04-26  17562.95  17725.39  17552.81  17703.61\n",
        "...          ...       ...       ...       ...       ...\n",
-       "8984  1984-04-09       NaN       NaN       NaN     60.69\n",
-       "8985  1984-04-06       NaN       NaN       NaN     60.62\n",
-       "8986  1984-04-05       NaN       NaN       NaN     61.06\n",
-       "8987  1984-04-04       NaN       NaN       NaN     61.24\n",
-       "8988  1984-04-03       NaN       NaN       NaN     61.33\n",
+       "7597  1991-01-11    294.33    300.91    294.00    300.77\n",
+       "7598  1991-01-09    294.01    296.93    293.65    296.35\n",
+       "7599  1991-01-07    293.59    295.39    290.42    295.39\n",
+       "7600  1991-01-03    292.27    294.41    289.01    289.04\n",
+       "7601  1991-01-02    304.01    304.01    293.93    293.93\n",
        "\n",
-       "[8989 rows x 5 columns]"
+       "[7567 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,10 +1381,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "BSE200=pd.read_csv(\"https://data.nasdaq.com/api/v3/datasets/BSE/BSE200.csv?api_key=hQ1m5NeC8pAcFbhW5xBE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BSE200=BSE200.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-05-02</td>\n",
+       "      <td>7415.26</td>\n",
+       "      <td>7473.02</td>\n",
+       "      <td>7403.19</td>\n",
+       "      <td>7465.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-04-29</td>\n",
+       "      <td>7590.01</td>\n",
+       "      <td>7604.27</td>\n",
+       "      <td>7464.79</td>\n",
+       "      <td>7485.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-04-28</td>\n",
+       "      <td>7530.77</td>\n",
+       "      <td>7580.10</td>\n",
+       "      <td>7476.13</td>\n",
+       "      <td>7552.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-04-27</td>\n",
+       "      <td>7496.89</td>\n",
+       "      <td>7500.80</td>\n",
+       "      <td>7430.05</td>\n",
+       "      <td>7466.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>7485.41</td>\n",
+       "      <td>7548.09</td>\n",
+       "      <td>7480.31</td>\n",
+       "      <td>7539.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6335</th>\n",
+       "      <td>1996-10-23</td>\n",
+       "      <td>316.52</td>\n",
+       "      <td>326.35</td>\n",
+       "      <td>312.33</td>\n",
+       "      <td>326.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6336</th>\n",
+       "      <td>1996-10-22</td>\n",
+       "      <td>304.22</td>\n",
+       "      <td>316.13</td>\n",
+       "      <td>304.22</td>\n",
+       "      <td>316.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6337</th>\n",
+       "      <td>1996-10-18</td>\n",
+       "      <td>301.28</td>\n",
+       "      <td>308.24</td>\n",
+       "      <td>300.28</td>\n",
+       "      <td>308.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6338</th>\n",
+       "      <td>1996-10-17</td>\n",
+       "      <td>306.90</td>\n",
+       "      <td>307.12</td>\n",
+       "      <td>298.76</td>\n",
+       "      <td>307.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6339</th>\n",
+       "      <td>1996-10-16</td>\n",
+       "      <td>307.97</td>\n",
+       "      <td>307.97</td>\n",
+       "      <td>301.51</td>\n",
+       "      <td>307.12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6337 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date     Open     High      Low    Close\n",
+       "0     2022-05-02  7415.26  7473.02  7403.19  7465.20\n",
+       "1     2022-04-29  7590.01  7604.27  7464.79  7485.54\n",
+       "2     2022-04-28  7530.77  7580.10  7476.13  7552.49\n",
+       "3     2022-04-27  7496.89  7500.80  7430.05  7466.36\n",
+       "4     2022-04-26  7485.41  7548.09  7480.31  7539.30\n",
+       "...          ...      ...      ...      ...      ...\n",
+       "6335  1996-10-23   316.52   326.35   312.33   326.35\n",
+       "6336  1996-10-22   304.22   316.13   304.22   316.09\n",
+       "6337  1996-10-18   301.28   308.24   300.28   308.24\n",
+       "6338  1996-10-17   306.90   307.12   298.76   307.12\n",
+       "6339  1996-10-16   307.97   307.97   301.51   307.12\n",
+       "\n",
+       "[6337 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BSE200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BSE500=pd.read_csv(\"https://data.nasdaq.com/api/v3/datasets/BSE/BSE500.csv?api_key=hQ1m5NeC8pAcFbhW5xBE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BSE500=BSE500.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-05-02</td>\n",
+       "      <td>23334.66</td>\n",
+       "      <td>23499.01</td>\n",
+       "      <td>23287.11</td>\n",
+       "      <td>23475.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-04-29</td>\n",
+       "      <td>23874.59</td>\n",
+       "      <td>23914.56</td>\n",
+       "      <td>23490.03</td>\n",
+       "      <td>23551.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-04-28</td>\n",
+       "      <td>23707.73</td>\n",
+       "      <td>23840.32</td>\n",
+       "      <td>23526.25</td>\n",
+       "      <td>23759.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-04-27</td>\n",
+       "      <td>23597.37</td>\n",
+       "      <td>23615.59</td>\n",
+       "      <td>23388.07</td>\n",
+       "      <td>23509.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>23568.14</td>\n",
+       "      <td>23755.48</td>\n",
+       "      <td>23550.74</td>\n",
+       "      <td>23729.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5650</th>\n",
+       "      <td>1999-08-13</td>\n",
+       "      <td>1357.41</td>\n",
+       "      <td>1359.21</td>\n",
+       "      <td>1337.78</td>\n",
+       "      <td>1340.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5651</th>\n",
+       "      <td>1999-08-12</td>\n",
+       "      <td>1357.21</td>\n",
+       "      <td>1363.76</td>\n",
+       "      <td>1351.37</td>\n",
+       "      <td>1351.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5652</th>\n",
+       "      <td>1999-08-11</td>\n",
+       "      <td>1340.59</td>\n",
+       "      <td>1365.65</td>\n",
+       "      <td>1333.50</td>\n",
+       "      <td>1351.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5653</th>\n",
+       "      <td>1999-08-10</td>\n",
+       "      <td>1364.63</td>\n",
+       "      <td>1364.63</td>\n",
+       "      <td>1350.15</td>\n",
+       "      <td>1357.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5654</th>\n",
+       "      <td>1999-08-09</td>\n",
+       "      <td>1347.49</td>\n",
+       "      <td>1371.15</td>\n",
+       "      <td>1347.49</td>\n",
+       "      <td>1365.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5654 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date      Open      High       Low     Close\n",
+       "0     2022-05-02  23334.66  23499.01  23287.11  23475.81\n",
+       "1     2022-04-29  23874.59  23914.56  23490.03  23551.65\n",
+       "2     2022-04-28  23707.73  23840.32  23526.25  23759.49\n",
+       "3     2022-04-27  23597.37  23615.59  23388.07  23509.36\n",
+       "4     2022-04-26  23568.14  23755.48  23550.74  23729.00\n",
+       "...          ...       ...       ...       ...       ...\n",
+       "5650  1999-08-13   1357.41   1359.21   1337.78   1340.85\n",
+       "5651  1999-08-12   1357.21   1363.76   1351.37   1351.37\n",
+       "5652  1999-08-11   1340.59   1365.65   1333.50   1351.47\n",
+       "5653  1999-08-10   1364.63   1364.63   1350.15   1357.96\n",
+       "5654  1999-08-09   1347.49   1371.15   1347.49   1365.63\n",
+       "\n",
+       "[5654 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BSE500"
+   ]
   },
   {
    "cell_type": "code",
